FIX/ Hide custom cusor on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -124,6 +124,9 @@ a {
   &.hide {
     opacity: 0;
   }
+  @include respond(tabport) {
+    display: none;
+  }
 }
 
 .cursor {
@@ -142,7 +145,9 @@ a {
     background-color: #46434c50;
     border: none;
   }
-
+  @include respond(tabport) {
+    display: none;
+  }
   // $shapes: (
   //   #005ffe: 650px,
   //   #ffe5e3: 440px,
